Changelog
=========

1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2013-12-20)
------------------

- fix alt and title.


1.0.2 (2013-11-13)
------------------

- Not view timestamp if blog not already published.


1.0.1 (2013-11-13)
------------------

- Add view for a blogitem.


1.0a4 (2013-09-27)
------------------

- Add registry for set language choice on collection.


1.0a3 (2013-01-18)
------------------

- fix get_localized_time issue when datetime is None (effective date)
- remove collective.configviews from dependencies
- Use archive-root-path-to-blog as rule id during the rule creation. Fix issue if you have multiple blog with same id. This can be the case if you use LinguaPlone with languages folder (/fr, /nl, ...)

1.0a2 (2013-01-17)
------------------

- fix setup view content rule creation (issue was on the target_root_folder)


1.0a1 (2013-01-16)
------------------

- Initial release